Make sure to read memory that actually contains what we want.  Bug 291020, r+sr=peterv, a=asa